--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
         "128": "icon-128.png"
     },
     "background": {
-        "scripts": ["jquery.js", "background.js"]
+        "page": "background.html"
     },
     "content_scripts": [{
         "js": ["content.js"],
